--- a/client/css/card.css
+++ b/client/css/card.css
@@ -1,3 +1,6 @@
+.card-container{
+  padding-top: 10px;
+}
 
 .card {
   display: inline-block;
@@ -6,7 +9,6 @@
   border-radius: 6%;
   width: 50px;
   height: 80px;
-  background-color: #ffe;
   margin: 0px 0px 5px 5px;
 }
 
@@ -16,4 +18,17 @@
 
 .card .value {
   text-align: center;
+}
+
+.prey-container{
+  margin: auto;
+  width: 50%;
+}
+
+.player-card{
+  background-color: #ffe;
+}
+
+.prey-card{
+  background-color: red;
 }
