--- a/client/css/card.css
+++ b/client/css/card.css
@@ -1,3 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,700;1,500&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+body{
+  font-family: Asap, sans-serif;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+[class*="col-"] {
+  float: left;
+}
+
 .card-container{
   padding-top: 10px;
 }
@@ -5,28 +38,27 @@
 .card {
   display: inline-block;
   position: relative;
-  border: 1px solid black;
+  border: 5px solid black;
   border-radius: 6%;
-  width: 50px;
-  height: 80px;
   margin: 0px 0px 5px 5px;
+  padding: 5px;
+  width:80px;
+  height:105px;
 }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.card .value {
+
+.vulture-card{
+  background-color: #2527E;
   text-align: center;
 }
 
-.prey-container{
-  margin: auto;
-  width: 50%;
-}
-
-.player-card{
-  background-color: #ffe;
+.vulture-card > .value, .image{
+  font-size: 2em;
+  font-weight: bold;
 }
 
 .prey-card{
