--- a/client/css/card.css
+++ b/client/css/card.css
@@ -31,11 +31,16 @@ body{
 [class*="col-"] {
   float: left;
 }
+.table-container{
+  display: grid;
+}
 
 .card-container{
   padding-top: 10px;
   float: left;
   display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
 }
 
 .card {
@@ -52,7 +57,7 @@ body{
   font-weight: bold;
 }
 
-.card:hover {
+.vulture-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
@@ -78,4 +83,33 @@ body{
 .vulture-card-back > .image{
   margin-top:0.3em;
   font-size: 130%;
+}
+
+.players-info{
+  float: left;
+  display: flex;
+}
+
+.players-info > .box{
+  padding: 10px;
+  margin: 8px;
+  text-align: center;
+}
+
+.players-info > .box > .name{
+  margin-bottom: 0.2em;
+  color: #F1FAEE;
+}
+
+.players-info > .box > .score{
+  margin: 0;
+  color: #F1FAEE;
+}
+
+.player-info > .box > .card-spot{
+  margin: 0;
+}
+
+.card-spot-full{
+  background-color: #A8DADC;
 }
